@@ -13,27 +13,27 @@
 <table>
     <tr>
         <td>I can write to &quot;cache/cacheconfig/settings.ini.php&quot; file</td>
-        <td><?php echo is_writable("cache/cacheconfig/settings.ini.php") ? '<span class="ok">Yes</span>' : '<span class="error">No</span>'?></td>
+        <td><?php echo is_writable("cache/cacheconfig/settings.ini.php") ? '<span class="success label round">Yes</span>' : '<span class="round label alert">No</span>'?></td>
     </tr>
     <tr>
         <td>I can write to &quot;cache/translations&quot; directory</td>
-        <td><?php echo is_writable("cache/translations") ? '<span class="ok">Yes</span>' : '<span class="error">No</span>'?></td>
+        <td><?php echo is_writable("cache/translations") ? '<span class="success label round">Yes</span>' : '<span class="round label alert">No</span>'?></td>
     </tr>
     <tr>
         <td>I can write to &quot;cache/userinfo&quot; directory</td>
-        <td><?php echo is_writable("cache/userinfo") ? '<span class="ok">Yes</span>' : '<span class="error">No</span>'?></td>
+        <td><?php echo is_writable("cache/userinfo") ? '<span class="success label round">Yes</span>' : '<span class="round label alert">No</span>'?></td>
     </tr>
     <tr>
         <td>I can write to &quot;cache/compiledtemplates&quot; directory</td>
-        <td><?php echo is_writable("cache/compiledtemplates") ? '<span class="ok">Yes</span>' : '<span class="error">No</span>'?></td>
+        <td><?php echo is_writable("cache/compiledtemplates") ? '<span class="success label round">Yes</span>' : '<span class="round label alert">No</span>'?></td>
     </tr>
     <tr>
         <td>I can write to &quot;settings/settings.ini.php&quot; directory</td>
-        <td><?php echo is_writable("settings/settings.ini.php") ? '<span class="ok">Yes</span>' : '<span class="error">No</span>'?></td>
+        <td><?php echo is_writable("settings/settings.ini.php") ? '<span class="success label round">Yes</span>' : '<span class="round label alert">No</span>'?></td>
     </tr>
     <tr>
         <td>Is the php-pdo extension installed</td>
-        <td><?php echo extension_loaded ('pdo_mysql' ) ? '<span class="ok">Yes</span>' : '<span class="error">No</span>'; ?></td>
+        <td><?php echo extension_loaded ('pdo_mysql' ) ? '<span class="success label round">Yes</span>' : '<span class="round label alert">No</span>'; ?></td>
     </tr>
 </table>
 <br>
